GNOME Bugzilla – Bug 672173
shell window: category view broken with gtk+ 3.3.19+
Last modified: 2012-03-16 17:21:53 UTC
Created attachment 209870 [details] Screenshot showing the bug Running g-c-c with a recent gtk+ git snapshot, the initial overview screen is garbled. I tracked this down to a recent change in gtk+, that caused troubles with mutter, too. The commit in question is 5d579811843f81db9866ac81afc5297f776cfb3b, meant as a fix for bug #662023. As mutter guys are stating that they were doing wrong and not gtk+ (see bug #671796), I'm reporting this against g-c-c, but feel free to reassign it to gtk+.
I can confirm this.
The root cause of this bug is that GtkIconView has never been updated to properly handle size requests. This usually all works because the icon view is inside a GtkScrolledWindow. And prior to the GTK patch, it happened to work by accident in the control center.
Should be fixed with http://git.gnome.org/browse/gtk+/commit/?id=ccbcebdddf47a09192b71fba24c1e752d73d0477
Yeah, this seems to fix it. Lets see what it breaks :-)